--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -36,17 +36,29 @@
 }
 
 .close-button {
-  font-size: 12px;
-
+  display: none;
+  width: 10px;
+  height: 10px;
   position: absolute;
   top: 16px;
-  right: 11px;
-
+  right: 16px;
   cursor: pointer;
+  background: url('./close.svg');
 
-  &:before {
-    content: 'X';
+  &:hover {
+    opacity: 0.6
+  }
+}
 
-    color: white;
+.container:hover .close-button {
+  display: block;
+}
+
+:global [data-hook="player-container"][max-width~="579px"] {
+  :local {
+    .close-button {
+      top: 10px;
+      right: 10px;
+    }
   }
 }
