--- a/dev-env/index.ejs
+++ b/dev-env/index.ejs
@@ -23,5 +23,17 @@
   <% } %>
 </head>
 <body>
+<div id="player-wrapper"></div>
+<a href="#" id="start-stream">start-stream</a>
+<a href="#" id="load-stream-to-player">load-stream-to-player</a>
+<a href="#" id="end-stream">end-stream</a>
+<span id="stream-status"></span>
+
+<br/>
+<a href="#" id="start-event">start-event</a>
+<a href="#" id="load-event-to-player">load-event-to-player</a>
+<a href="#" id="end-event">end-event</a>
+<span id="event-status"></span>
+
 </body>
 </html>
