--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -1,37 +1,13 @@
 .container {
-  position: relative;
-
+  position: absolute;
+  bottom: 0;
+  display: inline-block;
+  opacity: 0;
   padding: 6px;
-  &.shown {
-    animation-name: show;
-    animation-duration: .5s;
 
-    opacity: 1;
-  }
-
-  &.hidden {
-    animation-name: hide;
-    animation-duration: .5s;
-
-    opacity: 0;
-  }
-}
-
-@keyframes show {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes hide {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
+  &.animated {
+    transition-property: left, right, top, bottom, opacity;
+    transition-duration: 1s;
   }
 }
 
