set z-index on card instead of cards container

--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   opacity: 0;
   padding: 6px;
+  z-index: 65;
 
   &.animated {
     transition-property: left, right, top, bottom, opacity;
