--- a/src/default-modules/root-container/root-container.scss
+++ b/src/default-modules/root-container/root-container.scss
@@ -13,6 +13,8 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
 
   outline: none;
 
+  overflow: hidden;
+
   ::-moz-focus-inner {
     border: 0;
   }
