--- a/src/default-modules/ui/controls/volume/volume.scss
+++ b/src/default-modules/ui/controls/volume/volume.scss
@@ -158,7 +158,7 @@ $color: white !default;
   [data-focus-source='key'] [data-hook='volume-control'] [data-hook='volume-input-container'].focus-within,
   [data-focus-source='script'] [data-hook='volume-control'] [data-hook='volume-input-container'].focus-within {
     opacity: 1;
-    outline: 2px solid rgba(56, 153, 236, .8);
+    box-shadow: 0 0 0 2px rgba(56, 153, 236, .8);
   }
 
   [data-hook='volume-control'].focus-within,
