change close button behavior for preview mode

--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -40,3 +40,16 @@
     }
   }
 }
+
+:global .preview-mode {
+  :local {
+    .close-button {
+      opacity: 0.6;
+      cursor: default;
+
+      &:hover {
+        opacity: 0.6
+      }
+    }
+  }
+}
