add global class to card

--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -22,9 +22,10 @@
   right: 12px;
   cursor: pointer;
   background: url('./close.svg');
+  opacity: 0.6;
 
   &:hover {
-    opacity: 0.6
+    opacity: 0.8
   }
 }
 
