Small refactoring of dev-env

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,7 +22,7 @@
       align-items: center;
     }
   </style>
-  <script src="./video-player-develop.bundle.min.js"></script>
+  <script src="<%= staticsBaseUrl %>video-player-develop.bundle.js"></script>
 </head>
 <body>
 <div id="player-wrapper"></div>
