--- a/src/default-modules/ui/controls/time/time.scss
+++ b/src/default-modules/ui/controls/time/time.scss
@@ -3,8 +3,8 @@
 .time-wrapper {
   display: flex;
   flex: 0 0 auto;
-  //height: 15px;
 
+  height: 25px;
   margin-right: 18px;
 
   align-items: center;
@@ -18,9 +18,9 @@
 
 .time {
   font-size: 12px;
-  //line-height: 12px;
+  line-height: 25px;
 
-  color: $color-main;
+  color: white;
 
   @include in-full-screen() {
     font-size: 14px;
