--- a/src/default-modules/ui/screen/screen.scss
+++ b/src/default-modules/ui/screen/screen.scss
@@ -46,11 +46,25 @@
 .top-gradient-background {
   top: 0;
 
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(91, 88, 88, .03) 16%, rgba(43, 41, 41, .09) 39%, rgba(0, 0, 0, .15) 67%, rgba(0, 0, 0, .3));
+  background-image: linear-gradient(
+  to top,
+  rgba(0, 0, 0, .0),
+  rgba(0, 0, 0, .03) 24%,
+  rgba(0, 0, 0, .15) 50%,
+  rgba(0, 0, 0, .3) 75%,
+  rgba(0, 0, 0, .4)
+  );
 }
 
 .bottom-gradient-background {
   bottom: 0;
 
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(91, 88, 88, .03) 16%, rgba(43, 41, 41, .09) 39%, rgba(0, 0, 0, .15) 67%, rgba(0, 0, 0, .3));
+  background-image: linear-gradient(
+  to bottom,
+  rgba(0, 0, 0, .0),
+  rgba(0, 0, 0, .03) 24%,
+  rgba(0, 0, 0, .15) 50%,
+  rgba(0, 0, 0, .3) 75%,
+  rgba(0, 0, 0, .4)
+  );
 }
