--- a/src/default-modules/ui/title/title.scss
+++ b/src/default-modules/ui/title/title.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
 
   margin-top: 18px;
-  margin-left: 18px;
+  margin-left: 20px;
 
   transition: opacity .2s, visibility .2s;
   white-space: nowrap;
@@ -26,7 +26,9 @@
 .title {
   font-size: 16px;
   line-height: 17px;
+
   transition: opacity .2s, visibility .2s;
+
   opacity: 0;
 
   @include max-width-550() {
@@ -34,8 +36,8 @@
     line-height: 15px;
   }
   @include max-width-300 {
-    font-size: 12px;;
-    line-height: 13px;
+    font-size: 12px;
+    line-height: 13px;;
   }
   @include in-full-screen {
     font-size: 20px;
