--- a/src/default-modules/ui/controls/volume/volume.scss
+++ b/src/default-modules/ui/controls/volume/volume.scss
@@ -7,40 +7,34 @@ $color: white !default;
   position: relative;
 
   display: flex;
-  overflow: hidden;
 
-  width: 25px;
-  max-width: 25px;
-  height: 25px;
-  margin-right: 5px;
-  margin-left: 5px;
+  margin-right: 15px;
 
-  justify-content: center;
+  transition: width .2s;
+
+  justify-content: flex-start;
   align-items: center;
   @include in-full-screen() {
-    width: 35px;
-    max-width: 35px;
     height: 35px;
     margin-right: 20px;
   }
-  @include max-width-300() {
-    @include hidden();
-  }
 
   &:hover,
-  &:focus,
-  .focus-withing {
-    .container {
+  &.is-dragging {
+    margin-right: 20px;
+    .volume-input-block {
+      width: 50px;
+
       opacity: 1;
     }
   }
 }
 
 .mute-button {
-  width: 25px;
-  min-width: 25px;
-  height: 25px;
-  min-height: 25px;
+  width: 26px;
+  min-width: 26px;
+  height: 26px;
+  min-height: 26px;
 
   background-image: url('../../../../assets/volume-100.svg');
   background-repeat: no-repeat;
@@ -65,104 +59,78 @@ $color: white !default;
   }
 }
 
-.container {
-  font-size: 10px;
+.volume-input-block {
+  position: relative;
 
-  position: absolute;
-  top: -82px;
-  left: 0;
+  display: block;
 
-  padding: 9px 3px;
+  width: 0;
+  height: 25px;
+  margin-left: 2px;
 
-  transition: .2s opacity, .2s visibility;
+  transition: opacity .2s, width .2s;
 
   opacity: 0;
-  background-color: rgba(0,0,0, .5);
-
-  @include in-full-screen() {
-    top: -122px;
-  }
 }
 
-.content {
-  position: relative;
 
-  box-sizing: content-box;
-  width: 2px;
-  height: 60px;
-  padding: 2px 7px;
-
-  @include in-full-screen() {
-    width: 2px;
-    height: 100px;
-    padding: 2px 12px;
-  }
-}
-
-.input-wrapper {
-  position: relative;
-
-  width: 100%;
-  height: 100%;
-
-  background-color: rgba(255, 255, 255, .5);
-}
-
-.filled-progress {
+.progress-bar {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  top: 11.5px;
 
-  width: 100%;
+  height: 2px;
+  padding: 0;
+}
 
-  background-color: $color;
+.volume {
+  background-color: white;
 
-  &:before {
+  &:after {
     position: absolute;
-    top: -4px;
+    top: -3px;
     right: -4px;
 
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
 
     content: '';
+    transition: opacity .2s;
 
     border-radius: 50%;
     background-color: #fff;
   }
 }
 
-.volume-input {
-  position: absolute;
-  top: 0;
-  right: -5px;
-  bottom: 0;
-  left: -5px;
+.background {
+  width: 100%;
 
-  width: 12px;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  background-color: transparentize(#fff, .75);
+}
+
+.hitbox {
+  position: relative;
+  z-index: 5;
+
+  display: block;
+
+  width: 100%;
+  height: 25px;
 
   cursor: pointer;
-  -ms-writing-mode: bt-lr;
 
   opacity: 0;
-  border: 0;
-
-      writing-mode: bt-lr;
-  -webkit-appearance: slider-vertical;
 }
 
 :global {
-  [data-focus-source='key'] [data-hook='volume-control'] [data-hook='volume-input-container'].focus-within,
-  [data-focus-source='script'] [data-hook='volume-control'] [data-hook='volume-input-container'].focus-within {
-    opacity: 1;
-    box-shadow: 0 0 0 2px rgba(56, 153, 236, .8);
-  }
+  [data-focus-source='key'] [data-hook='volume-control'],
+  [data-focus-source='script'] [data-hook='volume-control'] {
+    margin-right: 20px;
 
-  [data-hook='volume-control'].focus-within,
-  [data-hook='volume-control']:hover {
-    overflow: visible;
+    [data-hook='volume-input-block'].focus-within {
+      width: 50px;
+
+      opacity: 1;
+      box-shadow: 0 0 0 2px rgba(56, 153, 236, .8);
+    }
   }
 }
