--- a/src/default-modules/ui/live-indicator/live-indicator.scss
+++ b/src/default-modules/ui/live-indicator/live-indicator.scss
@@ -15,6 +15,7 @@ $inactive-color: #959595;
   padding: 5px 7px;
 
   cursor: pointer;
+  transition: background-color .2s;
 
   color: #fff;
   background-color: $inactive-color;
@@ -74,7 +75,7 @@ $inactive-color: #959595;
 
   padding: 4px 7px;
 
-  transition: opacity .1s, visibility .1s;
+  transition: opacity .2s, visibility .2s;
   white-space: nowrap;
 
   opacity: 0;
