--- a/site/source/stylesheets/print.css.scss
+++ b/site/source/stylesheets/print.css.scss
@@ -143,7 +143,7 @@ body {
   }
 
   aside {
-    line-height: 1.6;
+    line-height: $line-height;
 
     margin-top: 1.5em;
     margin-bottom: 1.5em;
