Update doc logo

--- a/site/source/layouts/layout.erb
+++ b/site/source/layouts/layout.erb
@@ -59,7 +59,9 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
+      <div class="logo-wrapper">
+        <%= image_tag "logo.png", class: 'logo' %>
+      </div>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
