--- a/src/default-modules/ui/live-indicator/live-indicator.scss
+++ b/src/default-modules/ui/live-indicator/live-indicator.scss
@@ -4,13 +4,10 @@ $active-color: #ea492e;
 $inactive-color: #959595;
 
 .wrapper {
+  position: relative;
   // position styles start
-  position: absolute;
-  z-index: 61;
 
-  margin-top: 20px;
   margin-right: 15px;
-  margin-left: 20px;
   // position styles end
   padding: 5px 7px;
 
@@ -21,19 +18,13 @@ $inactive-color: #959595;
   background-color: $inactive-color;
 
   @include in-full-screen() {
-    margin-top: 30px;
     margin-right: 20px;
-    margin-left: 30px;
   }
   @include max-width-550() {
-    margin-top: 15px;
     margin-right: 10px;
-    margin-left: 15px;
   }
   @include max-width-280() {
-    margin-top: 12px;
     margin-right: 10px;
-    margin-left: 12px;
     padding: 2px 3px;
   }
 
