--- a/site/source/stylesheets/_variables.scss
+++ b/site/source/stylesheets/_variables.scss
@@ -53,6 +53,8 @@ $lang-select-pressed-text: #fff !default; // color of language tab text when mou
 
 // SIZES
 ////////////////////
+$content-top-padding: 40px !default;
+$header-height: 60px !default;
 $nav-width: 230px !default; // width of the navbar
 $examples-width: 50% !default; // portion of the screen taken up by code examples
 $main-padding: 28px !default; // padding to left and right of content & examples
