--- a/site/source/stylesheets/screen.css.scss
+++ b/site/source/stylesheets/screen.css.scss
@@ -39,6 +39,54 @@ body {
   -webkit-text-size-adjust: none; /* Never autoresize text */
 }
 
+.header {
+  position: fixed;
+  z-index: 200;
+  top: 0;
+  left: 0;
+
+  display: flex;
+
+  box-sizing: border-box;
+  width: 100%;
+  height: $header-height;
+  padding-right: 15px;
+
+  background: #1c1f21;
+
+  align-items: center;
+  justify-content: space-between;
+
+  .logo-wrapper {
+    padding: 0 15px;
+  }
+
+  .logo {
+    width: 100px;
+  }
+
+  input.search {
+    line-height: 40px;
+
+    padding: 0 15px 0 35px;
+
+    color: #fff;
+    border: 0;
+    border-radius: 40px;
+    outline: none;
+    background-color: transparent;
+    background-image: url('../images/search.svg');
+    background-repeat: no-repeat;
+    background-position-x: 10px;
+    background-position-y: center;
+    background-size: 16px 16px;
+
+    &:focus {
+      background-color: rgba(255, 255, 255, .1);
+    }
+  }
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // TABLE OF CONTENTS
 ////////////////////////////////////////////////////////////////////////////////
@@ -57,7 +105,7 @@ body {
 
   position: fixed;
   z-index: 30;
-  top: 0;
+  top: $header-height;
   bottom: 0;
   left: 0;
 
@@ -65,6 +113,7 @@ body {
   overflow-y: auto;
 
   width: $nav-width;
+  padding-top: $content-top-padding;
 
   transition: left .3s ease-in-out;
 
@@ -86,80 +135,6 @@ body {
 
     max-width: 100%;
   }
-
-  & > .search {
-    position: relative;
-
-    input {
-      box-sizing: border-box;
-      width: $nav-width - 30;
-      margin: $nav-v-padding $nav-padding;
-      padding: 6px 0 6px 20px;
-
-      color: $nav-text;
-      border-width: 0 0 1px 0;
-      border-color: $search-box-border-color;
-      border-radius: 0; /* ios has a default border radius */
-      outline: none;
-      background: $nav-bg;
-    }
-
-    &:before {
-      position: absolute;
-      top: 17px;
-      left: $nav-padding;
-
-      color: $nav-text;
-
-      @extend %icon-search;
-    }
-  }
-
-  .logo-wrapper {
-    box-sizing: border-box;
-    height: 85px;
-    padding: 20px 15px;
-  }
-
-  .logo {
-    width: 100%;
-  }
-
-  .search-results {
-    overflow-x: hidden;
-    overflow-y: auto;
-
-    box-sizing: border-box;
-    height: 0;
-    margin-top: 0;
-
-    transition-timing-function: ease-in-out;
-    transition-duration: 180ms;
-    transition-property: height, margin;
-
-    background: $nav-subitem-bg;
-    &.visible {
-      height: 30%;
-      margin-bottom: 1em;
-    }
-
-    li {
-      line-height: 1;
-
-      margin: 1em $nav-padding;
-    }
-
-    a {
-      text-decoration: none;
-
-      color: $nav-text;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-
 
   // The Table of Contents is composed of multiple nested
   // unordered lists.  These styles remove the default
@@ -306,6 +281,7 @@ body {
   z-index: 10;
 
   min-height: 100%;
+  margin-top: $header-height;
   margin-left: $nav-width;
   padding-bottom: 1px; // prevent margin overflow
 
@@ -383,6 +359,8 @@ body {
   // to place content above the dark box
   position: relative;
   z-index: 30;
+
+  padding-top: $content-top-padding;
   // fixes webkit rendering bug for some: see #538
 
   -webkit-transform: translateZ(0);
@@ -641,6 +619,20 @@ body {
       color: #939da3;
 
       @extend %code-font;
+    }
+  }
+
+  .title-anchor {
+    position: absolute;
+
+    margin: 2px 0 0 -22px;
+
+    text-decoration: none;
+
+    color: #d9dee3;
+
+    &:hover {
+      color: #3899ec;
     }
   }
 }
